# archiver

./: .gitignore
archiver-extension/: README.md  package-lock.json  package.json
archiver-extension/public/: manifest.json  popup.html
archiver-extension/src/: background.ts  content_script.tsx  popup.tsx
archiver-extension/webpack/: webpack.common.js
archiver-server/: Cargo.toml  README.md
archiver-server/src/: main.rs  storage.rs
